# Shenzhen-Innox-winter-camp--A3-group

./: README.md  Vlog视频链接.txt
src/apriltags2_ros/config/: tags(old).yaml
src/apriltags2_ros/launch/: continuous_detection.launch  detecting_usbcam.launch
src/color/: CMakeLists.txt  readme_identify.md  readme_move.md
src/fishmonger/: CMakeLists.txt  package.xml
src/fishmonger/launch/: fishmonger.launch
src/map_server/launch/: innox2024_wc.launch  rm2021_sc.launch  rm2022_wc.launch
src/mavlink2ros/launch/: robot.launch
src/mavlink2ros/msg/: ManageCtrl.msg  RemoterInfo.msg  ServosCtrl.msg  SingleServoCtrl.msg
src/myctrl/: CMakeLists.txt  package.xml
src/myctrl/launch/: myctrl.launch
src/myctrl/src/: myctrl.cpp
src/pid_move/: pid_test.py
src/robot_bringup/: package.xml
src/servos_ctrl/: CMakeLists.txt
src/servos_ctrl/scripts/: fish_catch.py
src/simple_planner/src/: local_planner.cpp
src/static_transform/src/: static_tf.cpp
src/tests/scripts/: test_remoter.py  test_servos.py  test_servos_size.py
个人资料/工程日志/: 1.30工程日志.docx  2.1工程日志.docx  2.2工程日志.docx  2.3工程日志.docx  ~$.1工程日志.docx  ~$29工程日志.docx  总体工程日志.docx
个人资料/组内互评/: 1.29 组内互评.docx  1.30 组内互评.docx  1.31 组内互评.docx  2.1 组内互评.docx  2.2 组内互评.docx  2.3 组内互评.docx
进阶三组资料/代码/color/: package.xml
进阶三组资料/代码/fishmonger/: README.md
进阶三组资料/代码/map_server/: readme.md
进阶三组资料/代码/mavlink2ros/: CMakeLists.txt  README.md  package.xml
进阶三组资料/代码/myctrl/: New_CMakeLists.txt
进阶三组资料/代码/odom_calib/: CMakeLists.txt  readme.md
进阶三组资料/代码/static_transform/: CMakeLists.txt  package.xml
(+33 files in other folders)
